# spatio-temporal-mapping

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  evaluation.sh  imgui.ini  install_deps.sh
config/: PATHoBot.yaml  PATHoBot_visualization.yaml  README.md  RealSense.yaml  RealSenseMapping.yaml  TUM.yaml  config.yaml
cpp/glasshouse_mapping/: CMakeLists.txt
cpp/glasshouse_mapping/apps/: CMakeLists.txt  CilantroNonRigidICP.cpp  ComputeAssociations.cpp  Evaluation.cpp  Mapping.cpp  SLAMInPreviousMap.cpp  SuperPointDeform.cpp
cpp/glasshouse_mapping/cilantro_wrapper/: CMakeLists.txt  CilantroPointCloud.cpp  CilantroPointCloud.hpp  CilantroWrapper.cpp  CilantroWrapper.hpp
cpp/glasshouse_mapping/core/: CMakeLists.txt  DeformationGraph.cpp  DeformationGraph.hpp  Localization.cpp  Localization.hpp  Mapping.cpp  Mapping.hpp  SensorInfo.cpp  SensorInfo.hpp  VoxelizedPointCloud.cpp  VoxelizedPointCloud.hpp
cpp/glasshouse_mapping/core/utils/: CMakeLists.txt
cpp/glasshouse_mapping/core/utils/config/: Config.cpp  Config.hpp
cpp/glasshouse_mapping/core/utils/decorators/: ExecutionTimerDecorator.cpp  ExecutionTimerDecorator.hpp
cpp/glasshouse_mapping/core/utils/libGraphCpp/: graph.hpp  graphOptions.hpp  plotGraph.hpp  polyscopeWrapper.hpp  readGraphOBJ.hpp  writeGraphOBJ.hpp
cpp/glasshouse_mapping/core/utils/nanoflann/: nanoflannWrapper.hpp
cpp/glasshouse_mapping/core/utils/parser/: PATHoBotDatasetParser.cpp  PATHoBotDatasetParser.hpp
cpp/glasshouse_mapping/core/utils/superpoint/: superpoint.cpp  superpoint.hpp  superpoint_matcher.cpp  superpoint_matcher.hpp
cpp/glasshouse_mapping/core/utils/visualization/: GlasshouseVisualizer.cpp  GlasshouseVisualizer.hpp
cpp/glasshouse_mapping/core/utils/voxel_hash_map/: VoxelHashMap.cpp  VoxelHashMap.hpp
cpp/glasshouse_mapping/dataset/: CMakeLists.txt  PATHoBotCamera.cpp  PATHoBotCamera.hpp  PATHoBotDataset.cpp  PATHoBotDataset.hpp
cpp/glasshouse_mapping/libtorch/: build-hash  build-version
cpp/glasshouse_mapping/libtorch/include/ATen/: CPUFunctions_inl.h  CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  CompositeImplicitAutogradFunctions_inl.h  Config.h  Functions.h  MetaFunctions_inl.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
cpp/glasshouse_mapping/libtorch/include/ATen/core/: TensorBody.h  aten_interned_strings.h  enum_tag.h
cpp/glasshouse_mapping/libtorch/include/ATen/ops/: _amp_foreach_non_finite_check_and_unscale_native.h  _amp_update_scale_native.h  _assert_async.h  _assert_async_native.h  _assert_scalar.h  _assert_scalar_native.h  _assert_tensor_metadata.h  _assert_tensor_metadata_compositeimplicitautograd_dispatch.h  _assert_tensor_metadata_ops.h  _chunk_cat.h  _chunk_cat_native.h  _conv_depthwise2d.h  _conv_depthwise2d_cuda_dispatch.h  _conv_depthwise2d_ops.h  _convert_weight_to_int4pack.h  _convert_weight_to_int4pack_native.h  _convolution.h  _convolution_compositeexplicitautograd_dispatch.h  _convolution_compositeimplicitautograd_dispatch.h  _convolution_double_backward.h  _convolution_double_backward_compositeimplicitautograd_dispatch.h  _convolution_double_backward_ops.h  _convolution_mode.h  _convolution_mode_compositeimplicitautograd_dispatch.h  _convolution_mode_native.h  _convolution_mode_ops.h  _convolution_native.h  _convolution_ops.h  _cslt_compress.h  _cslt_compress_native.h  _cslt_sparse_mm.h  _cslt_sparse_mm_cuda_dispatch.h  _cslt_sparse_mm_native.h  _cslt_sparse_mm_ops.h  _cslt_sparse_mm_search.h  _cslt_sparse_mm_search_cuda_dispatch.h  _cslt_sparse_mm_search_native.h  _cslt_sparse_mm_search_ops.h  _ctc_loss_native.h  _cudnn_init_dropout_state.h  (+719 more)
cpp/glasshouse_mapping/libtorch/include/tensorpipe/: config.h
cpp/glasshouse_mapping/libtorch/include/torch/csrc/api/include/torch/: version.h
cpp/glasshouse_mapping/libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2Targets-release.cmake  Caffe2Targets.cmake
cpp/glasshouse_mapping/libtorch/share/cmake/Tensorpipe/: TensorpipeTargets-release.cmake  TensorpipeTargets.cmake
cpp/glasshouse_mapping/libtorch/share/cmake/Torch/: TorchConfig.cmake  TorchConfigVersion.cmake
cpp/st_mapping/: CMakeLists.txt  README.md
cpp/st_mapping/cmake/: GlobalTargetProperty.cmake  StandardProjectOptions.cmake
cpp/st_mapping/core/: CMakeLists.txt  Deformation.cpp  Deformation.hpp  GlobalMap.cpp  GlobalMap.hpp  LocalMap.cpp  LocalMap.hpp  Mapping.cpp  Mapping.hpp  Registration.cpp  Registration.hpp  Threshold.cpp  Threshold.hpp
cpp/st_mapping/metrics/: CMakeLists.txt  Metrics.cpp  Metrics.hpp
examples/: params.yaml
python/: CMakeLists.txt  README.md  pyproject.toml
python/st_mapping/: __init__.py  deform_ref_pipeline.py  mapping_onref_pipeline.py  mapping_pipeline.py  odometry.py  tools.py
python/st_mapping/config/: __init__.py  config.py  parser.py
python/st_mapping/core/: deformation.py  global_map.py  local_map.py  mapping.py  metrics.py  registration.py  threshold.py
python/st_mapping/datasets/: __init__.py  generic.py  tum.py
python/st_mapping/pybind/: CMakeLists.txt  st_mapping_pybind.cpp  stl_vector_eigen.h
python/st_mapping/scripts/: deform_ref.py  mapping.py  mapping_onref.py
python/st_mapping/superpoint/: __init__.py  image_matcher.py  superpoint.py
python/st_mapping/tools/: __init__.py  io_tools.py  pretty_results.py  visualization_tools.py  visualizer.py
